# gpui-theme-fade

./: .gitignore  Cargo.toml  DEVELOPMENT_NOTES.md  GEMINI.md  ROADMAP.md  ZED_EXTENSION_ROADMAP.md
assets/: catppuccin.json
src/: main.rs  scheduler.rs  simulation.rs  state.rs  text_input.rs  theme.rs  ui.rs
src/components/: README.md  button.rs  code_preview.rs  dropdown.rs  form_field.rs  gradient_bar.rs  mod.rs  panel.rs  popover.rs  scrollable_container.rs  scrollbar.rs
src/components/editor_preview/: activity_bar.rs  breadcrumbs.rs  dummy_data.rs  editor_area.rs  file_tree.rs  mod.rs  status_bar.rs  tab_bar.rs  terminal.rs
