[package]
name = "gpui-test"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = { version = "*" }

# Time-based logic
chrono = "0.4.38"

# Logging
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# JSON parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hex color parsing
regex = "1.10.5"
once_cell = "1.19.0"

#Easier error handling
anyhow = "1.0.86"
futures = "0.3.30"
