[package]
name = "gpui-test"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }

gpui = { git = "https://github.com/zed-industries/zed", branch = "main"}

log = "0.4.21"
num-traits = "0.2.19"
rand = "0.8.5"
simplelog = "0.12.2"
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
schemars = "1.0.4"
futures = "0.3.30"
once_cell = "1.19.0"
regex = "1.10.5"
unicode-segmentation = "1.11.0"

# For theme parsing
serde_derive = "1.0"

# For time-based scheduling
time = "0.3.36"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# For smooth theme transitions
lerp = "0.4.0"
rust-embed = "8.9.0"
